# eda-agent

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: sync.yml  tests.yml
docs/: TOOL_NAMING.md
docs/altium-delphiscript/: 01-language-and-parser.md  01-servers.md  02-schematic-interfaces.md  02-types-and-data-structures.md  03-functions-scope-and-compilation.md  03-pcb-interfaces.md  04-strings-and-text.md  04-workspace-project-documents.md  05-enums.md  05-error-handling-and-runtime.md  06-interfaces-and-type-narrowing.md  06-types-and-coordinates.md  07-schematic-api.md  08-pcb-api.md  09-document-model-api.md  10-nonexistent-and-wrong-identifiers.md  README.md  appendix-environment-and-recovery.md
scripts/altium/: Altium_API.PrjScr  Application.pas  Audit.pas  Dispatcher.pas  Generic.pas  Library.pas  Main.pas  PCB.pas  PCBGeneric.pas  Project.pas  SelfTest.pas  StatusForm.dfm  StatusForm.pas  Utils.pas  build.py  lint.py
scripts/train/: build_placement_priors.py  train_quality_model.py
src/eda_agent/: __init__.py  __main__.py  cli.py  config.py  preconditions.py  scope.py  server.py
src/eda_agent/bridge/: __init__.py  altium_bridge.py  exceptions.py  process_manager.py  script_launcher.py
src/eda_agent/design/: __init__.py  _wiring.py  audit.py  benchmark.py  buses.py  canvas.py  component_values.py  composer.py  diffpairs.py  discipline.py  emitter.py  executor.py  fab_profile.py  footprint_check.py  footprints.py  force_directed.py  hierarchy.py  hsd_rules.py  illustrate.py  impedance_sizing.py  inventory.py  layout.py  learner.py  length_matching.py  mixed_signal.py  motifs.py  plan.py  (+26 more)
tests/: __init__.py  altium_simulator.py  conftest.py  cross_validate_pascal.pas  test_autonomy_tools.py  test_batch_tools.py  test_bridge.py  test_build_from_netlist_offline.py  test_bulk_hints.py  test_connectivity_batch.py  test_connectivity_freshness.py  test_cross_validate.py  test_cse_import.py  test_datasheet_hints.py  test_delphiscript_lint.py  test_delphiscript_logic.py  test_design_component_value_tool.py  test_design_layout_schematic_tool.py  test_design_visual_review.py  test_diag.py  test_docstring_references.py  test_e2e_integration.py  test_filter_matching.py  test_gap_fixes.py  test_illustrate.py  test_ipc_integration.py  test_json_parsing.py  test_kicad_footprint.py  test_lint_call_before_def.py  test_lint_interfacelist_free.py  test_lint_reserved_words.py  test_pas_project_consistency.py  test_pascal_logic.pas  test_pascal_runner.py  test_pcb_length_match_tool.py  test_pcb_new_features.py  test_pcb_placement.py  test_pcb_plan_placement.py  test_pcb_termination_tool.py  test_pcb_thermal_vias_tool.py  (+12 more)
tests/altium_probe/: IncludeTest.PrjScr  IncludeTestInner.pas  IncludeTestParent.pas
tests/benchmarks/: test_benchmarks.py
tests/design/: __init__.py  conftest.py  test_atomic_parts.py  test_audit_schematic.py  test_buses.py  test_canvas.py  test_component_values.py  test_composer.py  test_decoupling_audit.py  test_diffpairs.py  test_execute_gates.py  test_executor.py  test_fab_profile.py  test_footprints.py  test_hierarchy.py  test_hsd_rules.py  test_impedance_sizing.py  test_inventory.py  test_layout.py  test_learner.py  test_length_matching.py  test_lint_audit_consistency.py  test_mixed_signal.py  test_motif_descriptions.py  test_motifs.py  test_net_classes.py  test_net_classification.py  test_partition.py  test_pipeline.py  test_placement_constraints.py  test_placement_hints.py  test_plan_erc.py  test_plan_schema.py  test_plan_stats.py  test_priors.py  test_quality.py  test_render_svg.py  test_requirement.py  test_routing_safety.py  test_rule_synthesis.py  (+10 more)
tests/integration/: __init__.py  conftest.py  test_round_trip.py
tests/placement/: test_autoplace.py
tests/render/: test_rasterize.py  test_review_rubric.py  test_svg_wellformed.py
tests/route/: test_model.py  test_repair.py  test_router.py
tests/test_tools/: __init__.py
(+58 files in other folders)
